--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-pandas
-sqlite3
-langchain
-langchain-community
-langchain-huggingface
 streamlit
-fpdf
-PyPDF2
-transformers
-torch
-xlsxwriter
+duckdb
+pandas
+reportlab
+openpyxl
+langchain
+langchain-chroma
+langchain-huggingface
+langchain-community
+langchain-ollama
+PyMuPDF
